[gd_scene load_steps=3 format=3 uid="uid://dsjk4fwctdp7g"]

[ext_resource type="Script" path="res://Scenes/MainMenu/main_menu.gd" id="1_mhqhh"]
[ext_resource type="Theme" uid="uid://lrjlqngk68xu" path="res://Scenes/MainMenu/GameTheme.tres" id="1_p6tfo"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mhqhh")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.5
offset_top = -188.0
offset_right = 168.5
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_p6tfo")
theme_override_constants/separation = 15

[node name="StartGame" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_p6tfo")
text = "Start Game"

[node name="Options" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_p6tfo")
text = "Options"

[node name="Quit" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_p6tfo")
text = "Quit"

[node name="Options" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -181.5
offset_top = -181.5
offset_right = 181.5
offset_bottom = 181.5
grow_horizontal = 2
grow_vertical = 2

[node name="Back" type="Button" parent="Options/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="ButtonContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="ButtonContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="ButtonContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Options/VBoxContainer/Back" to="." method="_on_back_pressed"]
